# langchain-deepagents

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  agent.py  cli.py  config.py  intent_router.py  reloading_memory.py  sandbox.py  tools.py  (+2 more)
backend/: README.md  main.py  pyproject.toml  requirements.txt
backend/app/: agent.py  cli.py  config.py  context_retrieval.py  intent_router.py  prompts.py  reloading_skills.py  sandbox.py  serialization.py  server.py  session_context.py  session_memory.py  session_store.py  skill_catalog.py  tools.py
backend/memory/: AGENTS.md  MEMORY.md  SOUL.md  USER.md
backend/prompts/: conversation_compress.md  memory_optimize.md  skill_optimize.md
backend/skills/api-debug/: SKILL.md
backend/skills/data-digest/: SKILL.md
backend/skills/data-digest/readers/dataframe/: SKILL.md
backend/skills/data-digest/readers/excel/: SKILL.md
backend/skills/data-digest/readers/json/: SKILL.md
backend/skills/data-digest/readers/txt/: SKILL.md
backend/skills/data-digest/scripts/: probe.py
backend/skills/db-field-lineage/: SKILL.md
backend/skills/db-field-lineage/agents/: openai.yaml
backend/skills/python-sandbox-exec/: SKILL.md
backend/skills/research-plan/: SKILL.md
backend/skills/skill-creator/: SKILL.md
backend/skills/skill-creator/agents/: openai.yaml
backend/tests/: test_duckdb_tool.py  test_python_sandbox_security.py  test_sandbox_and_serialization.py  test_sandbox_file_path_resolution.py  test_session_sandbox_lifecycle.py
backend/tests/skills/: test_data_digest_probe.py
(+33 files in other folders)
